<resources>
    <string name="app_name">Umood</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Following</string>
    <string name="title_notifications">Profile</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">username</string>

    <!--  String below are used in Add emotion xml -->
    <string name="social_situation"> Social Situation</string>
    <string name="location"> Location</string>
    <string name="location2"> Image</string>
    <string name="reason"> Reason</string>
    <string name="optional"> Optional(*)</string>
    <string name="finish"> Finish</string>
    <string name="map"> Map Logo</string>
    <string name="cancel"> Cancel</string>


    <!--  String below are used in Login xml -->
    <string name="no_account"> Sign up</string>
    <string name="action_sign_in"> Sign in </string>
    <string name="action_sign_up"> Sign up </string>
    <string name="adv"> Share your mood with friends </string>
    <string name="enter_username"> Username </string>
    <string name="title"> Title</string>
    <string name="Slogan"> Slogan </string>
    <string name="team"> Designed by CMPUT301F19T11</string>

    <!--  String below are used in Signup xml -->
    <string name="sign_up_prompt"> Create your account:</string>

    <!--  String below are used in addMoodInfo xml -->
    <string name="enterMoodPrompt">Choose your emotion for now</string>
    <string name="moodHappy">Happy</string>
    <string name="moodSad">Sad</string>
    <string name="moodBoring">Boring</string>
    <string name="moodCry">Cry</string>
    <string name="moodLove">Love</string>
    <string name="moodConfused">Confused</string>
    <string name="moodBack">Cancel</string>
    <string name="moodForward">Next</string>
    <string name="moodFinish">Finish&#160;&#160;>></string>




    <!--  String below are used in filter xml -->
    <string name="filter">Back</string>
    <string name="emo_state">  emotional state</string>
    <string name="history">  Mood History</string>


    <!--  String below are used in filter xml -->
    <string name="feed">Feed</string>

    <!--  String below are used in fragment_Following xml -->
    <string name="search">SearchBar</string>
    <string name="add_fllow">Add Following</string>
    <string name="follower">Follower</string>
    <string name="request">Following Request</string>


    <!--  String below are used in add_Following xml -->
    <string name="add_f_confirm">Confirm</string>
    <string name="add_f_following">add following</string>
    <string name="add_f_back">Back</string>

    <!--  String below are used in following request xml -->
    <string name="f_request_text">Following Request</string>
    <string name="f_request_button_ok">Accept</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="do_you_want_to_receive_strangers_following_request">Do you want to receive strangers following request?</string>
    <string name="do_you_want_to_add_your_current_location_to_your_mood_event_automatically">Do you want to add your current location to your mood event automatically?</string>
    <string name="apply">apply</string>


    <!--  String below are used in profile xml -->
    <string name="profile_setting">Settings</string>
    <string name="profile_feed">Activity</string>
    <string name="profile_moodHistory">Mood History</string>
    <string name="profile_chart">Mood Statistics</string>
    <string name="profile_post">Posts</string>
    <string name="profile_following">Following</string>
    <string name="profile_follower">Follower</string>
    <string name="profile_avatar">The avatar of this user</string>
    <string name="profile_background">The background</string>
    <string name="profile_sample_username">sample</string>


    <!--  String below are used in Information xml -->
    <string name="information_date">Date</string>
    <string name="information_time">Time</string>
    <string name="information_reason">Reason</string>
    <string name="information_delete">Save</string>
    <string name="information_pic">An image which is uploaded by user</string>
    <string name="information_background">A background</string>


</resources>


