<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMoodFirstActivity">

    <Button
        android:id="@+id/save_button3"
        android:layout_width="118dp"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/signup_button"
        android:text="Next  >>"
        android:textStyle="italic"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/scaredButton2"
        android:layout_width="94dp"
        android:layout_height="78dp"

        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        android:background="#00000000"
        android:contentDescription="@string/moodLove"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scared" />

    <ImageButton
        android:id="@+id/happyButton2"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:background="#00000000"
        android:contentDescription="@string/moodHappy"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toEndOf="@+id/angryButton2"
        app:layout_constraintTop_toBottomOf="@+id/sickButton2"
        app:srcCompat="@drawable/happy" />

    <ImageButton
        android:id="@+id/sickButton2"
        android:layout_width="94dp"
        android:layout_height="78dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="200dp"
        android:background="#00000000"
        android:contentDescription="@string/moodSad"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toEndOf="@+id/scaredButton2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sick" />

    <ImageButton
        android:id="@+id/angryButton2"
        android:layout_width="94dp"
        android:layout_height="78dp"

        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="32dp"
        android:background="#00000000"
        android:contentDescription="@string/moodCry"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scaredButton2"
        app:srcCompat="@drawable/angry" />

</androidx.constraintlayout.widget.ConstraintLayout>