<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="236dp"
        android:layout_height="57dp"
        android:layout_marginTop="68dp"
        android:text="@string/do_you_want_to_receive_strangers_following_request"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        android:typeface="monospace"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="240dp"
        android:layout_height="82dp"
        android:layout_marginTop="168dp"
        android:text="@string/do_you_want_to_add_your_current_location_to_your_mood_event_automatically"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        android:typeface="monospace"

        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/switch2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumb="@drawable/switch_button"
        android:track="@drawable/switch_track"

        android:layout_marginTop="188dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumb="@drawable/switch_button"
        android:track="@drawable/switch_track"

        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/apply"
        android:layout_width="105dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/apply_button"
        android:text="@string/apply"

        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp" />




</androidx.constraintlayout.widget.ConstraintLayout>
